--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "date-fns": "^2.12.0",
+    "express": "^4.17.1",
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
