Convert persistence layer to TypeORM
Added a migration for creating the appointment table.
Converted the Appointment model and repository to a TypeORM entity and repository.

TypeORM needs to be executed with ts-node to read TypeScript files and the package "reflect-metadata" to work properly with decorators.

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -48,7 +48,9 @@
       {
         "ts": "never"
       }
-    ]
+    ],
+
+    "class-methods-use-this": "off"
   },
   "settings": {
     "import/resolver": {
