--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
     "pg": "^8.2.1",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.24",
     "uuidv4": "^6.0.7"
   },
@@ -20,6 +21,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5",
+    "ts-node": "^8.10.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
@@ -28,6 +30,7 @@
     "lint": "eslint \"src/**\"",
     "lint:fix": "yarn lint --fix",
     "dev:server": "ts-node-dev --respawn --transpileOnly --no-notify src/server.ts",
-    "dev:server:debug": "ts-node-dev --inspect --respawn --transpileOnly --no-notify src/server.ts"
+    "dev:server:debug": "ts-node-dev --inspect --respawn --transpileOnly --no-notify src/server.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   }
 }
