--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
     "pg": "^8.2.1",
@@ -11,6 +12,7 @@
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
