--- a/backend/package.json
+++ b/backend/package.json
@@ -4,30 +4,31 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^4.0.1",
-    "date-fns": "^2.12.0",
+    "date-fns": "^2.14.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.24",
-    "uuidv4": "^6.0.7"
+    "typeorm": "^0.2.25",
+    "uuidv4": "^6.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "eslint": "^6.8.0",
+    "@types/multer": "^1.4.3",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5",
-    "ts-node": "^8.10.1",
+    "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
   },
   "scripts": {
     "build": "tsc",
