--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -23,6 +23,8 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
+    "react/prop-types": "off",
+    "react/jsx-props-no-spreading": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-filename-extension": [
       "error",
