--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -54,7 +54,7 @@
           ["parent", "sibling"],
           "index"
         ],
-        "newlines-between": "always",
+        "newlines-between": "always-and-inside-groups",
         "alphabetize": {
           "order": "asc"
         }
