--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -31,12 +31,8 @@
       { "extensions": [".ts", ".tsx", ".js", ".jsx"] }
     ],
 
-    "@typescript-eslint/explicit-function-return-type": [
-      "error",
-      {
-        "allowExpressions": true
-      }
-    ],
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
 
     "@typescript-eslint/no-unused-expressions": "error",
     "no-unused-expressions": "off",
