--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-feather": "^2.0.8",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
+    "uuidv4": "^6.2.0",
     "yup": "^0.29.1"
   },
   "scripts": {
