--- a/backend/package.json
+++ b/backend/package.json
@@ -3,43 +3,43 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
-    "date-fns": "^2.14.0",
+    "date-fns": "^2.15.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "pg": "^8.2.1",
+    "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.25",
-    "uuidv4": "^6.1.0"
+    "uuidv4": "^6.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
+    "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
-    "eslint": "^7.1.0",
-    "eslint-config-airbnb-base": "^14.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.3"
+    "ts-node-dev": "^1.0.0-pre.52",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "build": "tsc",
     "lint": "eslint \"src/**\"",
     "lint:fix": "yarn lint --fix",
-    "dev:server": "ts-node-dev --respawn --transpileOnly --no-notify --poll src/server.ts",
-    "dev:server:debug": "ts-node-dev --inspect --respawn --transpileOnly --no-notify --poll src/server.ts",
+    "dev:server": "ts-node-dev --respawn --transpile-only --no-notify src/server.ts",
+    "dev:server:debug": "ts-node-dev --inspect --respawn --transpile-only --no-notify src/server.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   }
 }
