--- a/backend/package.json
+++ b/backend/package.json
@@ -32,14 +32,15 @@
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.52",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.7"
   },
   "scripts": {
     "build": "tsc",
     "lint": "eslint \"src/**\"",
     "lint:fix": "yarn lint --fix",
-    "dev:server": "ts-node-dev --respawn --transpile-only --no-notify src/server.ts",
-    "dev:server:debug": "ts-node-dev --inspect --respawn --transpile-only --no-notify src/server.ts",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
+    "dev:server": "ts-node-dev --respawn --transpile-only --no-notify src/bin/server.ts",
+    "dev:server:debug": "ts-node-dev --inspect --respawn --transpile-only --no-notify src/bin/server.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   }
 }
