--- a/backend/package.json
+++ b/backend/package.json
@@ -5,42 +5,41 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
-    "date-fns": "^2.15.0",
+    "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "pg": "^8.3.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.25",
-    "uuidv4": "^6.2.0"
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.7",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/multer": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.22.0",
+    "@types/multer": "^1.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5",
-    "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.52",
+    "prettier": "^2.2.0",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.7"
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "build": "tsc",
-    "lint": "eslint \"src/**\"",
-    "lint:fix": "yarn lint --fix",
-    "dev:server": "ts-node-dev --respawn --transpile-only --no-notify src/bin/server.ts",
-    "dev:server:debug": "ts-node-dev --inspect --respawn --transpile-only --no-notify src/bin/server.ts",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "dev:server": "ts-node-dev --inspect --respawn --transpile-only --no-notify src/bin/server.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   }
 }
