--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -7,10 +7,10 @@
   "password": "docker",
   "database": "gobarber",
 
-  "entities": ["./src/models/**/*.ts"],
-  "migrations": ["./src/database/migrations/*.ts"],
+  "entities": ["./src/modules/**/entities/**/*.ts"],
+  "migrations": ["./src/shared/infrastructure/typeorm/migrations/*.ts"],
 
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/shared/infrastructure/typeorm/migrations"
   }
 }
