--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -34,15 +34,18 @@
           }
         ],
         "groups": ["builtin", ["external", "internal"], "unknown", ["parent", "sibling"], "index"],
-        "newlines-between": "always",
+        "newlines-between": "always-and-inside-groups",
         "alphabetize": {
           "order": "asc"
         }
       }
     ],
 
+    "import/prefer-default-export": "off",
     "class-methods-use-this": "off",
-    "max-classes-per-file": "off"
+    "max-classes-per-file": "off",
+    "@typescript-eslint/require-await": "off",
+    "no-void": "off"
   },
   "settings": {
     "import/resolver": {
