--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -45,7 +45,15 @@
     "class-methods-use-this": "off",
     "max-classes-per-file": "off",
     "@typescript-eslint/require-await": "off",
-    "no-void": "off"
+    "no-void": "off",
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "prefix": ["I"],
+        "format": ["PascalCase"]
+      }
+    ]
   },
   "settings": {
     "import/resolver": {
