--- a/backend/package.json
+++ b/backend/package.json
@@ -12,43 +12,43 @@
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.16",
+    "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
-    "typeorm": "^0.2.29",
-    "uuid": "^8.3.1"
+    "typeorm": "^0.2.30",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.9",
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/multer": "^1.4.4",
+    "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "eslint": "^7.14.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
-    "prettier": "^2.2.0",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
-    "ts-node-dev": "^1.0.0",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "build": "tsc",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
-    "dev:server": "NODE_ENV=\"development\" ts-node-dev -r tsconfig-paths/register --inspect --respawn --transpile-only --no-notify src/shared/infrastructure/http/server.ts",
+    "start:dev": "NODE_ENV=\"development\" ts-node-dev -r tsconfig-paths/register --inspect --respawn --transpile-only --no-notify src/shared/infrastructure/http/server.ts",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
