Send a notification to the provider when an appointment is made
Added MongoDB to docker-compose.yml
Added an example .env file

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -13,3 +13,9 @@ services:
       POSTGRES_DB: ${DATABASE_NAME}
 
     env_file: .env
+
+  mongo:
+    image: mongo
+
+    ports:
+      - '${MONGO_PORT}:27017'
