--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,7 @@
+APP_SECRET=
+APP_API_URL="http://localhost:3333"
+APP_WEB_URL="http://localhost:3000"
+
 MAIL_TRAP_HOST="smtp.mailtrap.io"
 MAIL_TRAP_PORT=2525
 MAIL_TRAP_USER=
@@ -11,4 +15,6 @@ DATABASE_USERNAME="docker"
 DATABASE_PASSWORD="docker"
 DATABASE_NAME="gobarber"
 
+MONGO_HOST="localhost"
 MONGO_PORT=27017
+MONGO_DB_NAME="gobarber"
