--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "celebrate": "^13.0.4",
+    "class-transformer": "^0.3.2",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
