Add query caching and rate limiting with Redis

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,3 +15,8 @@ services:
     image: mongo
     ports:
       - '${MONGO_PORT}:27017'
+
+  redis:
+    image: redis:alpine
+    ports:
+      - '${REDIS_PORT}:6379'
