--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,7 @@ DATABASE_NAME="gobarber"
 MONGO_HOST="localhost"
 MONGO_PORT=27017
 MONGO_DB_NAME="gobarber"
+
+REDIS_HOST="redis"
+REDIS_PORT=6379
+REDIS_PASSWORD=
