--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -4,40 +4,27 @@
     "es2020": true
   },
   "extends": [
-    "plugin:react/recommended",
-    "airbnb",
+    "airbnb-typescript",
     "airbnb/hooks",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:import/typescript",
     "plugin:prettier/recommended",
     "prettier/@typescript-eslint"
   ],
-  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
     "ecmaVersion": 11,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
-  "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/jsx-one-expression-per-line": "off",
-    "react/jsx-filename-extension": [
-      "error",
-      { "extensions": [".ts", ".tsx", ".js", ".jsx"] }
-    ],
 
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/explicit-function-return-type": "off",
-
-    "@typescript-eslint/no-unused-expressions": "error",
-    "no-unused-expressions": "off",
-
-    "camelcase": "off",
+    "@typescript-eslint/unbound-method": "off",
 
     "import/prefer-default-export": "off",
     "import/order": [
