--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@unform/core": "^2.1.3",
-    "@unform/web": "^2.1.3",
+    "@unform/core": "^2.1.5",
+    "@unform/web": "^2.1.5",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "polished": "^4.1.0",
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "4.0.2",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "uuidv4": "^6.2.6",
@@ -48,6 +48,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll false",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{ts,tsx,js}\"",
     "lint:fix": "eslint --fix \"src/**/*.{ts,tsx,js}\""
@@ -62,6 +63,15 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/components/**/*.tsx",
+      "src/context/**/*.tsx",
+      "src/hooks/**/*.tsx",
+      "src/pages/**/*.tsx",
+      "!src/context/AppProvider.tsx"
     ]
   }
 }
